--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,11 @@
         <div class="info">Press <strong>Enter</strong> to play again!</div>
       </div>
 
-    </div>
-  </main>
+    </main>
+    <footer class="footer">
+        See the project on Github here: <a href="https://github.com/bryclee/scramble">https://github.com/bryclee/scramble</a>
+    </footer>
+  </div>
 
   <script src="scripts/app.js"></script>
 
