--- a/public/index.html
+++ b/public/index.html
@@ -19,22 +19,18 @@
 
       <div scramble-input class="play-screen" ng-if="state==='play'" ng-controller="playController">
         <div class="play-letter-box">
-          <span class="user-letter" ng-repeat="userLetter in userInput">
-            {{userLetter.letter}}
-          </span><!--
-          --><span class="scramble-letter" ng-repeat="letter in letters">
-            {{letter.letter}}
-          </span>
+          <span class="user-letter" ng-repeat="userLetter in userInput" ng-bind="userLetter.letter"></span><!--
+          --><span class="scramble-letter" ng-repeat="letter in letters" ng-bind="letter.letter"></span>
         </div>
         <div class="play-stats">
-          <div class="play-time info">Time remaining: <strong>{{timer}}</strong></div>
-          <div class="play-score info">Current score: <strong>{{score}}</strong></div>
+          <div class="play-time info">Time remaining: <strong ng-bind="timer"></strong></div>
+          <div class="play-score info">Current score: <strong ng-bind="score"></strong></div>
         </div>
       </div>
 
       <div scramble-input class="score-screen text-screen" ng-if="state==='score'" ng-controller="scoreController">
-        <div class="info">The last word was <strong>{{word}}</strong>.</div>
-        <div class="info">Your score was <strong>{{score}}</strong>.</div>
+        <div class="info">The last word was <strong ng-bind="word"></strong>.</div>
+        <div class="info">Your score was <strong ng-bind="score"></strong>.</div>
         <div class="info">Press <strong>Enter</strong> to play again!</div>
       </div>
 
